--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   card_swiper: ^3.0.1
+  provider: ^6.0.5
+  http: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
